--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <modelVersion>4.0.0</modelVersion>
 
-    <name>DCSA :: Port Call :: Backend</name>
+    <name>DCSA :: Port Call</name>
     <groupId>org.dcsa.portcall</groupId>
     <artifactId>dcsa-port-call</artifactId>
     <version>DEVELOP-SNAPSHOT</version>
