--- a/ui/angular.json
+++ b/ui/angular.json
@@ -32,7 +32,7 @@
               "node_modules/primeflex/primeflex.css",
               "node_modules/primeicons/primeicons.css",
               "node_modules/primeng/resources/primeng.min.css",
-              "node_modules/primeng/resources/themes/bootstrap4-light-blue/theme.css"
+              "src/app/DCSA-Theme.scss"
             ],
             "scripts": []
           },
