--- a/ui/angular.json
+++ b/ui/angular.json
@@ -32,7 +32,7 @@
               "node_modules/primeflex/primeflex.css",
               "node_modules/primeicons/primeicons.css",
               "node_modules/primeng/resources/primeng.min.css",
-              "src/app/DCSA-Theme.scss"
+              "DCSA-Theme.scss"
             ],
             "scripts": []
           },
