DCSA-3 added pojo jooq generation and added post for VesselController

--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -177,6 +177,7 @@
                             <fluentSetters>true</fluentSetters>
                             <generatedAnnotation>false</generatedAnnotation>
                             <varargSetters>false</varargSetters>
+                            <pojos>true</pojos>
                         </generate>
                     </generator>
                 </configuration>
