DCSA-3 Added spring-boot-maven-plugin

--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -187,6 +187,25 @@
                     </generator>
                 </configuration>
             </plugin>
+
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>${spring-boot.version}</version>
+                <configuration>
+                    <mainClass>org.dcsa.portcall.PortCallApplication</mainClass>
+                    <attach>true</attach>
+                    <classifier>app</classifier>
+                    <layout>JAR</layout>
+                </configuration>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>repackage</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
     </build>
 
