--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,11 @@
             -ea -Djava.awt.headless=true -Djava.net.preferIPv4Stack=true
         </test.vmparameter>
 
+        <!-- Maven plugins frontend -->
+        <frontend-maven-plugin.version>1.10.3</frontend-maven-plugin.version>
+        <maven-assembly-plugin.version>3.3.0</maven-assembly-plugin.version>
+
+        <!-- Maven plugins backend -->
         <createversion-maven-plugin.version>1.3.0</createversion-maven-plugin.version>
         <maven-clean-plugin.version>3.1.0</maven-clean-plugin.version>
         <maven-resources-plugin.version>3.2.0</maven-resources-plugin.version>
@@ -31,6 +36,7 @@
         <maven-jar-plugin.version>3.2.0</maven-jar-plugin.version>
         <maven-surefire-plugin.version>3.0.0-M5</maven-surefire-plugin.version>
 
+        <!-- Production dependencies -->
         <commons-lang3.version>3.11</commons-lang3.version>
         <flyway.version>6.5.7</flyway.version>
         <jooq.version>3.13.5</jooq.version>
@@ -38,6 +44,7 @@
         <postgres.driver.version>42.2.18</postgres.driver.version>
         <spring-boot.version>2.3.4.RELEASE</spring-boot.version>
 
+        <!-- Test dependencies -->
         <assertj.version>3.17.2</assertj.version>
         <junit.version>5.7.0</junit.version>
         <mockito.version>3.5.13</mockito.version>
@@ -45,6 +52,7 @@
 
     <modules>
         <module>backend</module>
+        <module>ui</module>
     </modules>
 
     <dependencyManagement>
