--- a/ui/pom.xml
+++ b/ui/pom.xml
@@ -42,6 +42,7 @@
         </executions>
         <configuration>
           <nodeVersion>v12.19.0</nodeVersion>
+          <npmVersion>6.14.8</npmVersion>
         </configuration>
       </plugin>
       <plugin>
