DCSA-3 Setting npm version

--- a/ui/pom.xml
+++ b/ui/pom.xml
@@ -30,6 +30,13 @@
             <phase>generate-resources</phase>
           </execution>
           <execution>
+            <id>npm-install</id>
+            <goals>
+              <goal>npm</goal>
+            </goals>
+            <phase>generate-resources</phase>
+          </execution>
+          <execution>
             <id>npm-run-build</id>
             <goals>
               <goal>npm</goal>
