DCSA-3 Added company name to properties

--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -76,6 +76,12 @@
             <artifactId>spring-boot-starter-jooq</artifactId>
             <version>${spring-boot.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+            <version>${spring-boot.version}</version>
+            <optional>true</optional>
+        </dependency>
 
         <dependency>
             <groupId>io.springfox</groupId>
@@ -197,7 +203,14 @@
                     <attach>true</attach>
                     <classifier>app</classifier>
                     <layout>JAR</layout>
+                    <excludes>
+                        <exclude>
+                            <groupId>org.springframework.boot</groupId>
+                            <artifactId>spring-boot-configuration-processor</artifactId>
+                        </exclude>
+                    </excludes>
                 </configuration>
+
                 <executions>
                     <execution>
                         <goals>
