DCSA-3 P6-27 Externalized logging configuration

--- a/pom.xml
+++ b/pom.xml
@@ -266,6 +266,9 @@
                             </manifestEntries>
                             <addMavenDescriptor>false</addMavenDescriptor>
                         </archive>
+                        <excludes>
+                            <exclude>log4j2.xml</exclude>
+                        </excludes>
                     </configuration>
                     <executions>
                         <execution>
