P6-49 Creating connection to PONTON X/P to receive in-/out-bound messages

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -65,3 +65,11 @@ springdoc:
 
 dcsa:
   company: Development
+  messenger:
+    adapter:
+      id: DCSA
+      version: 1.0
+    host: localhost
+    port: 8081
+
+
