--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -111,6 +111,12 @@
         </dependency>
 
         <dependency>
+            <groupId>ponton.product.pontonxp</groupId>
+            <artifactId>adapterapi2</artifactId>
+            <version>${pontonxp.version}</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <version>${spring-boot.version}</version>
