--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,7 @@
         <flyway.version>6.5.7</flyway.version>
         <jooq.version>3.13.5</jooq.version>
         <log4j.version>2.13.3</log4j.version>
+        <pontonxp.version>3.10.0</pontonxp.version>
         <postgres.driver.version>42.2.18</postgres.driver.version>
         <spring-boot.version>2.3.4.RELEASE</spring-boot.version>
 
