--- a/bamboo-specs/bamboo.yml
+++ b/bamboo-specs/bamboo.yml
@@ -23,6 +23,8 @@ stages:
 Build:
   tasks:
     - script:
+        - export JAVA_HOME={bamboo_capability_system_jdk_OpenJDK_11}
+        - export PATH=${JAVA_HOME}/bin:${PATH}
         - ${bamboo_capability_system_builder_mvn3_maven_3_6}/bin/mvn ponton.product.maven.plugins:createversion-maven-plugin:create versions:set
         - ${bamboo_capability_system_builder_mvn3_maven_3_6}/bin/mvn clean deploy
   final-tasks:
