--- a/bamboo-specs/bamboo.yml
+++ b/bamboo-specs/bamboo.yml
@@ -22,15 +22,10 @@ stages:
 
 Build:
   tasks:
-    - maven:
-        executable: Maven 3.6
-        jdk: OpenJDK 11
-        goal: ponton.product.maven.plugins:createversion-maven-plugin:create versions:set
-        tests: false
-    - maven:
-        executable: Maven 3.6
-        jdk: OpenJDK 11
-        goal: clean deploy
-        tests: false
+    - script:
+        - export JAVA_HOME=${bamboo_capability_system_jdk_OpenJDK_11}
+        - export PATH=${JAVA_HOME}/bin:${PATH}
+        - ${bamboo_capability_system_builder_mvn3_maven_3_6}/bin/mvn ponton.product.maven.plugins:createversion-maven-plugin:create versions:set
+        - ${bamboo_capability_system_builder_mvn3_maven_3_6}/bin/mvn clean deploy
   final-tasks:
     - clean
