--- a/bamboo-specs/bamboo.yml
+++ b/bamboo-specs/bamboo.yml
@@ -28,4 +28,5 @@ Build:
         - ${bamboo_capability_system_builder_mvn3_maven_3_6}/bin/mvn ponton.product.maven.plugins:createversion-maven-plugin:create versions:set
         - ${bamboo_capability_system_builder_mvn3_maven_3_6}/bin/mvn clean deploy
   final-tasks:
+    - test-parser: junit
     - clean
