--- a/pom.xml
+++ b/pom.xml
@@ -40,16 +40,16 @@
         <commons-lang3.version>3.11</commons-lang3.version>
         <fasterxml-jackson.version>2.11.3</fasterxml-jackson.version>
         <flyway.version>6.5.7</flyway.version>
-        <jooq.version>3.13.5</jooq.version>
-        <log4j.version>2.13.3</log4j.version>
+        <jooq.version>3.14.3</jooq.version>
+        <log4j.version>2.14.0</log4j.version>
         <pontonxp.version>3.10.0</pontonxp.version>
         <postgres.driver.version>42.2.18</postgres.driver.version>
-        <spring-boot.version>2.3.4.RELEASE</spring-boot.version>
+        <spring-boot.version>2.4.0</spring-boot.version>
 
         <!-- Test dependencies -->
-        <assertj.version>3.17.2</assertj.version>
+        <assertj.version>3.18.1</assertj.version>
         <junit.version>5.7.0</junit.version>
-        <mockito.version>3.5.13</mockito.version>
+        <mockito.version>3.6.0</mockito.version>
     </properties>
 
     <modules>
@@ -137,6 +137,11 @@
                 <artifactId>junit-jupiter-api</artifactId>
                 <version>${junit.version}</version>
                 <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.junit.jupiter</groupId>
+                <artifactId>junit-jupiter-engine</artifactId>
+                <version>${junit.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.junit.jupiter</groupId>
@@ -251,7 +256,6 @@
                         <dependency>
                             <groupId>org.junit.jupiter</groupId>
                             <artifactId>junit-jupiter-engine</artifactId>
-                            <!--suppress MavenModelInspection -->
                             <version>${junit.version}</version>
                         </dependency>
                     </dependencies>
