P6-60 Store Inserted DCSA Message to FS

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -65,6 +65,14 @@ springdoc:
 
 dcsa:
   company: Development
+  sender-role: Carrier
+  sender-id-type: SMDG_LINER_CODE
+  sender-id: ABC
+
+  hotfolder:
+    outbox: "C:/opt/outbox/"
+    inbox: "./inbox"
+
   messenger:
     adapter:
       id: DCSA
