P6-60 initializing in- and outbox on application start

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -70,8 +70,8 @@ dcsa:
   sender-id: ABC
 
   hotfolder:
-    outbox: "C:/opt/outbox/"
-    inbox: "./inbox"
+    outbox: "hotfolder/outbox"
+    inbox: "hotfolder/inbox"
 
   messenger:
     adapter:
