--- a/pom.xml
+++ b/pom.xml
@@ -39,7 +39,7 @@
         <!-- Production dependencies -->
         <commons-lang3.version>3.11</commons-lang3.version>
         <fasterxml-jackson.version>2.11.3</fasterxml-jackson.version>
-        <flyway.version>6.5.7</flyway.version>
+        <flyway.version>7.2.1</flyway.version>
         <jooq.version>3.14.3</jooq.version>
         <log4j.version>2.14.0</log4j.version>
         <pontonxp.version>3.10.0</pontonxp.version>
@@ -50,6 +50,7 @@
         <assertj.version>3.18.1</assertj.version>
         <junit.version>5.7.0</junit.version>
         <mockito.version>3.6.0</mockito.version>
+        <testcontainers.version>1.15.0</testcontainers.version>
     </properties>
 
     <modules>
