P6-60 Added storage for in- and outgoing messages

--- a/bamboo-specs/bamboo.yml
+++ b/bamboo-specs/bamboo.yml
@@ -33,3 +33,5 @@ Build:
           test-results:
             - backend/target/surefire-reports
       - clean
+  requirements:
+    - system.docker.executable
