--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,7 @@
         <pontonxp.version>3.10.0</pontonxp.version>
         <postgres.driver.version>42.2.18</postgres.driver.version>
         <spring-boot.version>2.4.0</spring-boot.version>
+        <spring-retry.version>1.3.0</spring-retry.version>
 
         <!-- Test dependencies -->
         <assertj.version>3.18.1</assertj.version>
