--- a/ui/angular.json
+++ b/ui/angular.json
@@ -13,12 +13,6 @@
       "root": "",
       "sourceRoot": "src",
       "prefix": "app",
-      "i18n": {
-        "sourceLocale": "en-US",
-        "locales": {
-          "de": "src/locale/messages.de.xlf"
-        }
-      },
       "architect": {
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
@@ -40,8 +34,7 @@
               "node_modules/primeng/resources/primeng.min.css",
               "DCSA-Theme.scss"
             ],
-            "scripts": [],
-            "localize": true
+            "scripts": []
           },
           "configurations": {
             "production": {
@@ -71,9 +64,7 @@
                   "maximumError": "512kb"
                 }
               ]
-            },
-            "de": {
-              "localize": ["de"]
+
             }
           }
         },
@@ -86,9 +77,6 @@
           "configurations": {
             "production": {
               "browserTarget": "ui:build:production"
-            },
-            "de": {
-              "browserTarget": "ui:build:de"
             }
           }
         },
