--- a/ui/package.json
+++ b/ui/package.json
@@ -20,6 +20,8 @@
     "@angular/platform-browser": "~10.1.5",
     "@angular/platform-browser-dynamic": "~10.1.5",
     "@angular/router": "~10.1.5",
+    "@ngx-translate/core": "^13.0.0",
+    "@ngx-translate/http-loader": "^6.0.0",
     "prime": "^0.5.0",
     "primeflex": "^2.0.0",
     "primeicons": "^4.0.0",
