--- a/.github/workflows/build_snapshot.yml
+++ b/.github/workflows/build_snapshot.yml
@@ -16,14 +16,14 @@ jobs:
         uses: actions/checkout@v2
       - name: Name of branch
         id: branch
-        uses: ashley-taylor/regex-property-action@v1.2
+        uses: ashley-taylor/regex-property-action@1.2
         with:
           value: ${{ github.ref }}
           regex: ".*/"
           flags: "" # Optional, defaults to "g"
           replacement: ""
       - name: branch
-        run: echo "${{ steps.branch.outputs.value }}"
+        run: echo "${{ steps.branch.outputs.value }}""
       - name: Set up JDK
         uses: actions/setup-java@v1
         with:
